# tes-backend

./: .dockerignore  Dockerfile  Dockerfile_local  README.md  example.db  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 88b5e8b19d14_.py  a9b7590c24ca_.py
app/: backend_pre_start.py  initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  case.py  result.py  result_2.py
app/clients/: m_case_2.json  reddit.py  worker_v1.py
app/core/: auth.py  config.dev.py  config.prod.py  config.py  security.py
app/crud/: __init__.py  base.py  crud_case.py  crud_caseparams.py  crud_caseparams_2.py  crud_costprofile.py  crud_electricsplitprofile.py  crud_flowprofile.py  crud_loadprofile.py  crud_loadsplitprofile.py  crud_result.py  crud_result_2.py  crud_user.py
app/db/: base.py  create_db.py  init_db.py  session.py
app/models/: case.py  result.py  user.py
app/schemas/: __init__.py  case.py  caseparams.py  cost_profile.py  electricsplit_profile.py  flowprofile.py  loadsplit_profile.py  message.py  result.py  user.py  user_input.py
app/tests/: conftest.py
app/tests/api/: test_recipe.py
sqlite/: sqlite.db
